RESOLVED FIXED104018
[V8] EventTarget shouldn't be a special snowflake
https://bugs.webkit.org/show_bug.cgi?id=104018
Summary [V8] EventTarget shouldn't be a special snowflake
Adam Barth
Reported 2012-12-04 11:11:55 PST
[V8] EventTarget shouldn't be a special snowflake
Attachments
Patch (11.20 KB, patch)
2012-12-04 11:13 PST, Adam Barth
no flags
Adam Barth
Comment 1 2012-12-04 11:13:30 PST
Adam Barth
Comment 2 2012-12-04 12:48:14 PST
Comment on attachment 177516 [details] Patch Clearing flags on attachment: 177516 Committed r136550: <http://trac.webkit.org/changeset/136550>
Adam Barth
Comment 3 2012-12-04 12:48:16 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.