[V8] EventTarget shouldn't be a special snowflake https://bugs.webkit.org/show_bug.cgi?id=104018

Reviewed by Eric Seidel.

Previously we special-cased the toV8 operation for event targets.
There's no need for that. We can use IDL attribute to handle
EventTarget using the same general-purpose code that we use for other
interfaces.

* WebCore.gypi:
* bindings/scripts/CodeGeneratorV8.pm:
(NativeToJSValue):
* bindings/v8/V8AbstractEventListener.cpp:
(WebCore::V8AbstractEventListener::getReceiverObject):
* bindings/v8/V8DOMWrapper.cpp:
* bindings/v8/V8DOMWrapper.h:
(V8DOMWrapper):
* bindings/v8/V8WorkerContextEventListener.cpp:
(WebCore::V8WorkerContextEventListener::getReceiverObject):
* bindings/v8/custom/V8EventTargetCustom.cpp: Added.
(WebCore):
(WebCore::toV8):
* dom/EventTarget.idl:


Canonical link: https://commits.webkit.org/122135@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136550 268f45cc-cd09-0410-ab3c-d52691b4dbfc