Source/WebCore/bindings/v8/V8AbstractEventListener.cpp
@@ -40,6 +40,7 @@
 #include "V8Binding.h"
 #include "V8Event.h"
 #include "V8EventListenerList.h"
+#include "V8EventTarget.h"
 #include "V8HiddenPropertyName.h"
 #include "V8Utilities.h"
 #include "WorkerContext.h"
@@ -187,7 +188,7 @@ v8::Local<v8::Object> V8AbstractEventListener::getReceiverObject(Event* event)
         return v8::Local<v8::Object>::New(m_listener.get());
 
     EventTarget* target = event->currentTarget();
-    v8::Handle<v8::Value> value = V8DOMWrapper::convertEventTargetToV8Object(target);
+    v8::Handle<v8::Value> value = toV8(target);
     if (value.IsEmpty())
         return v8::Local<v8::Object>();
     return v8::Local<v8::Object>::New(v8::Handle<v8::Object>::Cast(value));
